[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.81"
chrono = "0.4.38"
uuid = { version = "1.10.0", features = ["v4"]}
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
thiserror = "1.0"
rand = "0.8.5"
regex = "1.10.6"
sqlx = { version = "0.8.2", features = [ "postgres", "runtime-tokio" ] }
serde = { version = "1.0.200", features = ["derive"] }
aggregate_root = { path = "../shared/aggregate_root" }
events = { path = "../shared/events" }
cqrs = { path = "../shared/cqrs" }
